Melhorias de visualizacao em desktop

--- a/index.html
+++ b/index.html
@@ -4,27 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/deadpool.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./dist/images/deadpool.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Tilt+Prism&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./dist/styles/main.css">
     <title>Deadpool</title>
 </head>
+
 
 <body>
     <div class="container">
         <header class="header">
             <div class="header__trailer">
-                <a href="#">
-                    <img src="./images/film.svg" alt="iniciar filme" title="trailer" />
+                <a href="https://youtu.be/Q9X-bAE8KTc" target="_blank">
+                    <img src="./dist/images/film.svg" alt="iniciar filme" title="trailer" />
                 </a>
             </div>
             <h1 class="header__brand">
                 <a href="#watch">
-                    <img src="./images/paintingFaceDeadpool.png" alt="pintura da mascará deadpool" />
+                    <img src="./dist/images/paintingFaceDeadpool.png" alt="pintura da mascará deadpool" />
                 </a>
             </h1>
             <div class="header__play">
-                <a href="#">
-                    <img src="./images/play-circle.svg" alt="iniciar filme" title="filme" />
+                <a href="https://www.disneyplus.com/pt-br/movies/deadpool/3Kh13Lrb0Pnv" target="_blank">
+                    <img src="./dist/images/play-circle.svg" alt="iniciar filme" title="filme" />
                 </a>
             </div>
         </header>
@@ -50,128 +55,128 @@
                 <ul id="placeholder" class="scenes__list__placeholder">
                     <li class="scenes__list__placeholder__item ">
                         <a href="#">
-                            <img class="scenes__img" src="./images/placeholderdeadpool1.jpg" />
+                            <img class="scenes__img" src="./dist/images/placeholderdeadpool1.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__placeholder__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/placeholderdeadpool2.jpg" alt="Primeira Cena" />
+                            <img class="scenes__img" src="./dist/images/placeholderdeadpool2.jpg" alt="Primeira Cena" />
                         </a>
                     </li>
                     <li class="scenes__list__placeholder__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/placeholderdeadpool3.jpg" alt="Primeira Cena" />
+                            <img class="scenes__img" src="./dist/images/placeholderdeadpool3.jpg" alt="Primeira Cena" />
                         </a>
                     </li>
                     <li class="scenes__list__placeholder__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/placeholderdeadpool3.jpg" alt="Primeira Cena" />
+                            <img class="scenes__img" src="./dist/images/placeholderdeadpool3.jpg" alt="Primeira Cena" />
                         </a>
                     </li>
                     <li class="scenes__list__placeholder__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/placeholderdeadpool1.jpg" alt="Primeira Cena" />
+                            <img class="scenes__img" src="./dist/images/placeholderdeadpool1.jpg" alt="Primeira Cena" />
                         </a>
                     </li>
                     <li class="scenes__list__placeholder__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/placeholderdeadpool2.jpg" alt="Primeira Cena" />
+                            <img class="scenes__img" src="./dist/images/placeholderdeadpool2.jpg" alt="Primeira Cena" />
                         </a>
                     </li>
                 </ul>
                 <ul class="scenes__list">
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena1.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena1.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena2.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena2.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena3.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena3.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena4.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena4.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena5.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena5.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena6.jpg" />
-                        </a>
-                    </li>
-                </ul>
-                <ul class="scenes__list">
-                    <li class="scenes__list__item">
-                        <a href="#">
-                            <img class="scenes__img" src="./images/cena7.jpg" />
-                        </a>
-                    </li>
-                    <li class="scenes__list__item">
-                        <a href="#">
-                            <img class="scenes__img" src="./images/cena8.jpg" />
-                        </a>
-                    </li>
-                    <li class="scenes__list__item">
-                        <a href="#">
-                            <img class="scenes__img" src="./images/cena9.jpg" />
-                        </a>
-                    </li>
-                    <li class="scenes__list__item">
-                        <a href="#">
-                            <img class="scenes__img" src="./images/cena10.jpg" />
-                        </a>
-                    </li>
-                    <li class="scenes__list__item">
-                        <a href="#">
-                            <img class="scenes__img" src="./images/cena11.jpg" />
-                        </a>
-                    </li>
-                    <li class="scenes__list__item">
-                        <a href="#">
-                            <img class="scenes__img" src="./images/cena12.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena6.jpg" />
                         </a>
                     </li>
                 </ul>
                 <ul class="scenes__list">
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena13.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena7.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena14.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena8.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena15.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena9.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena16.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena10.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena17.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena11.jpg" />
                         </a>
                     </li>
                     <li class="scenes__list__item">
                         <a href="#">
-                            <img class="scenes__img" src="./images/cena18.jpg" />
+                            <img class="scenes__img" src="./dist/images/cena12.jpg" />
+                        </a>
+                    </li>
+                </ul>
+                <ul class="scenes__list">
+                    <li class="scenes__list__item">
+                        <a href="#">
+                            <img class="scenes__img" src="./dist/images/cena13.jpg" />
+                        </a>
+                    </li>
+                    <li class="scenes__list__item">
+                        <a href="#">
+                            <img class="scenes__img" src="./dist/images/cena14.jpg" />
+                        </a>
+                    </li>
+                    <li class="scenes__list__item">
+                        <a href="#">
+                            <img class="scenes__img" src="./dist/images/cena15.jpg" />
+                        </a>
+                    </li>
+                    <li class="scenes__list__item">
+                        <a href="#">
+                            <img class="scenes__img" src="./dist/images/cena16.jpg" />
+                        </a>
+                    </li>
+                    <li class="scenes__list__item">
+                        <a href="#">
+                            <img class="scenes__img" src="./dist/images/cena17.jpg" />
+                        </a>
+                    </li>
+                    <li class="scenes__list__item">
+                        <a href="#">
+                            <img class="scenes__img" src="./dist/images/cena18.jpg" />
                         </a>
                     </li>
                 </ul>
